syntax = "proto3";

option go_package = "github.com/balchua/demo-jetstream/pkg/api/verifier";
option java_multiple_files = true;
option java_package = "com.github.balchua.demo-jetstream.verifier";
option java_outer_classname = "VerifierProto";

package verifier;

service TransactionVerifier {
  rpc VerifyTransaction (VerifyTransactionRequest) returns (VerifyTransactionResponse) {}
}

message Transaction {
    int64 userId = 1;
    int64 transactionID = 2;
    string status = 3;
    string amount = 4;
}

enum StatusCode {
    OK = 0;
    NOT_OK = 1;
}

message VerifyTransactionRequest {
    Transaction tx = 1;
}

message VerifyTransactionResponse {
  string message = 1;
  Transaction tx = 2;
  StatusCode code = 3;
}